fix dotted ruler alignment

--- a/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
+++ b/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
@@ -94,6 +94,7 @@
 
     &Container {
       overflow-x: clip;
+      margin: 0px 24px;
     }
 
     &Description {
